responsive html/css page done

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/queries.css" />
 
     <script
       type="module"
@@ -40,6 +41,10 @@
           <li><a class="main-nav-link nav-cta" href="">Try for free</a></li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -407,6 +412,18 @@
               alt="Photo of beautifully arranged food"
             />
           </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-11.jpg"
+              alt="Photo of beautifully arranged food"
+            />
+          </figure>
+          <figure class="gallery-item">
+            <img
+              src="img/gallery/gallery-12.jpg"
+              alt="Photo of beautifully arranged food"
+            />
+          </figure>
         </div>
       </section>
       <section class="section-pricing">
@@ -610,7 +627,7 @@
             >
           </address>
         </div>
-        <nav class="anv-col">
+        <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#"> Create account</a></li>
@@ -619,7 +636,7 @@
             <li><a class="footer-link" href="#"> Android app</a></li>
           </ul>
         </nav>
-        <nav class="anv-col">
+        <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#"> About Omnifood</a></li>
@@ -628,7 +645,7 @@
             <li><a class="footer-link" href="#"> Careers</a></li>
           </ul>
         </nav>
-        <nav class="anv-col">
+        <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
             <li><a class="footer-link" href="#"> Recipe directory</a></li>
