--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description "
+      content="Omnifood is an AI-powered food
+    subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal taste and nutritional needs."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Icons -->
+    <link rel="icon" href="/img/favicon 64x64.png" />
+    <link rel="apple-touch-icon" href="/img/favicon-apple 180x180.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +41,7 @@
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
 
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again</title>
   </head>
   <body>
     <header class="header">
@@ -85,11 +95,16 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
-              src="img/hero.png"
-              class="hero-img"
-              alt="Women enjoying food, meals in storage container and food bowls on a table"
-            />
+            <!-- Browser will choose the img depends on compability -->
+            <picture>
+              <source src="img/hero.webp" type="image/webp" />
+              <source src="img/hero.png" type="image/png" />
+              <img
+                src="img/hero.png"
+                class="hero-img"
+                alt="Women enjoying food, meals in storage container and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
