add name tag  to form input

--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
                   <input
                     id="full-name"
                     type="text"
+                    name="full-name"
                     placeholder="Jhon Smith"
                     required
                   />
@@ -583,6 +584,7 @@
                   <input
                     id="email"
                     type="email"
+                    name="email"
                     placeholder="me@example.com"
                     required
                   />
@@ -590,7 +592,7 @@
                 <div>
                   <label for="select-where">Where did you hear about us?</label>
 
-                  <select id="select-where" required>
+                  <select id="select-where" name="select-where" required>
                     <option value="">Please choose on option</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">Youtube</option>
